k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lams-prod
  labels:
    app.kubernetes.io/name: lams
    environment: production
